[gd_scene load_steps=5 format=3 uid="uid://bk31milhmpc03"]

[ext_resource type="PackedScene" uid="uid://clbbrwtticbka" path="res://player/components/player_component.tscn" id="1_p5jtk"]
[ext_resource type="Script" uid="uid://bky5j3ugl3j7n" path="res://player/components/weapons/player_weapon_component.gd" id="2_cklku"]

[sub_resource type="CylinderMesh" id="CylinderMesh_p5jtk"]

[sub_resource type="TorusMesh" id="TorusMesh_cklku"]

[node name="PlayerWeaponComponent" instance=ExtResource("1_p5jtk")]
script = ExtResource("2_cklku")
bullet_travel_speed = 1

[node name="WeaponPivot" type="Node3D" parent="." index="0"]

[node name="Weapon" type="Node3D" parent="WeaponPivot" index="0"]

[node name="WeaponMesh" type="MeshInstance3D" parent="WeaponPivot/Weapon" index="0"]
transform = Transform3D(0.2, 0, 0, 0, -8.742278e-09, 0.2, 0, -0.2, -8.742278e-09, 0, 0, 0)
mesh = SubResource("CylinderMesh_p5jtk")
skeleton = NodePath("../../..")

[node name="WeaponMeshTop" type="MeshInstance3D" parent="WeaponPivot/Weapon/WeaponMesh" index="0"]
transform = Transform3D(0.32075995, 0, 0, 0, 1, 0, 0, 0, 0.32476947, 0, 1, 4.371139e-08)
mesh = SubResource("TorusMesh_cklku")

[node name="BulletInstanceTarget" type="Marker3D" parent="WeaponPivot/Weapon" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.23)
